fix: add color contrasts consistency

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -38,7 +38,7 @@
   }
   .dark {
     --background: 0 0% 6%;
-    --foreground: 0 0% 80%;
+    --foreground: 0 0% 90%;
     --card: 0 0% 3.9%;
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
